src/test/ui/async-await/async-unsafe-fn-call-in-safe.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/async-unsafe-fn-call-in-safe.rs:12:5
   |
LL |     S::f();
   |     ^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/async-unsafe-fn-call-in-safe.rs:13:5
   |
LL |     f();
   |     ^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/async-unsafe-fn-call-in-safe.rs:17:5
   |
LL |     S::f();
   |     ^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/async-unsafe-fn-call-in-safe.rs:18:5
   |
LL |     f();
   |     ^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0133`.
